--- a/khaial-website/package.json
+++ b/khaial-website/package.json
@@ -15,7 +15,8 @@
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-i18next": "^15.6.1"
+    "react-i18next": "^15.6.1",
+    "tree": "^0.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
