--- a/khaial-website/package.json
+++ b/khaial-website/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "@tailwindcss/typography": "^0.5.16",
     "i18next": "^25.3.4",
     "next": "15.4.6",
